add rule list example

--- a/interp-workshop/model-based.ipynb
+++ b/interp-workshop/model-based.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -17,7 +26,7 @@
     "from copy import deepcopy\n",
     "import pandas as pd\n",
     "from numpy import array as arr\n",
-    "import time\n",
+    "import time, sys, os\n",
     "sys.path.append('../src')\n",
     "import utils\n",
     "\n",
@@ -58,7 +67,7 @@
     "\n",
     "from rulefit import RuleFit\n",
     "\n",
-    "boston_data = pd.read_csv(\"boston.csv\", index_col=0)\n",
+    "boston_data = pd.read_csv(\"data/boston.csv\", index_col=0)\n",
     "\n",
     "y = boston_data.medv.values\n",
     "X = boston_data.drop(\"medv\", axis=1)\n",
@@ -101,15 +110,50 @@
    "source": [
     "# scalable bayesian rule lists\n",
     "- docs at `https://github.com/myaooo/pysbrl`\n",
-    "- requires installing some `c` packages (ex. instructions [here](https://coral.ise.lehigh.edu/jild13/2016/07/11/hello/))"
+    "- requires installing some `c` packages (ex. instructions [here](https://coral.ise.lehigh.edu/jild13/2016/07/11/hello/))\n",
+    "- note: import format is pretty strange (it is sensible in [R](https://rdrr.io/cran/sbrl/man/sbrl.html))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "if {c4=o,c5=o,c6=o}: 0.04\n",
+      "elif {c1=x,c7=x}: 0.86\n",
+      "elif {c5=x,c7=o,c9=o}: 0.58\n",
+      "elif {c1=x,c2=x,c3=x}: 0.98\n",
+      "elif {c5=o,c9=o}: 0.02\n",
+      "elif {c1=o,c2=o,c3=o}: 0.04\n",
+      "elif {c3=x,c4=b,c9=x}: 0.93\n",
+      "elif {c7=o,c9=o}: 0.08\n",
+      "elif {c1=x,c2=b,c3=x}: 0.88\n",
+      "elif {c5=o,c7=o}: 0.17\n",
+      "elif {c6=o,c9=o}: 0.43\n",
+      "elif {c4=x,c5=o}: 0.33\n",
+      "elif {c1=o,c4=o,c7=o}: 0.05\n",
+      " default: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this example has categorical variables c1, c2, ... that take on values 'o', 'x', 'b'\n",
+    "\n",
+    "import pysbrl\n",
+    "\n",
+    "rule_ids, outputs, rule_strings = pysbrl.train_sbrl(\"data/train.out\", \n",
+    "                                                    \"data/train.label\", \n",
+    "                                                    20.0, eta=2.0, max_iters=2000)\n",
+    "\n",
+    "class_num = 1\n",
+    "for i, rule_id in enumerate(rule_ids):\n",
+    "    prefix = 'if' if i == 0 else 'elif' if i < len(rule_ids) -1 else ''\n",
+    "    print(prefix, rule_strings[rule_id] + f': {outputs[i, class_num]:0.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
