--- a/sim/eda_sim_classification_flipped_labels.ipynb
+++ b/sim/eda_sim_classification_flipped_labels.ipynb
@@ -440,46 +440,20 @@
    ],
    "source": [
     "plt.plot(X_new[:, feature_num], f(X_new)[:, 1], color='black')\n",
-    "plt.plot(x[:, feature_num], f(x)[:, 1], 'o', color='black', ms=8)\n",
+    "plt.plot(x_f, f(x)[:, 1], 'o', color='black', ms=8)\n",
+    "x_f = x[:, feature_num]\n",
     "\n",
     "delta_plot = 0.05\n",
-    "plt.plot([x[:, feature_num], x[:, feature_num] + delta_plot], \n",
+    "plt.plot([x_f, x_f + delta_plot], \n",
     "         [yhat, yhat + (yhat_plus - yhat) * (delta_plot / delta)], lw=10, alpha=0.4, color=cblue)\n",
-    "plt.plot([x[:, feature_num], x[:, feature_num] - delta_plot], \n",
+    "plt.plot([x_f, xx_f - delta_plot], \n",
     "         [yhat, yhat + (yhat_minus - yhat) * (delta_plot / delta)], lw=10, alpha=0.4, color=cred)\n",
     "plt.axhline(pred_mean, color='gray', alpha=0.5, linestyle='--')\n",
+    "plt.vhline(x[:, feature_num], )\n",
     "plt.xlabel('feature value')\n",
     "plt.ylabel('model prediction')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
