--- a/interp-workshop/model-based.ipynb
+++ b/interp-workshop/model-based.ipynb
@@ -2,48 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from copy import deepcopy\n",
+    "import pandas as pd\n",
+    "import time, sys, os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# short decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "train mse: 9.65\n"
      ]
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
+    "boston_data = pd.read_csv(\"data/boston.csv\", index_col=0)\n",
+    "\n",
+    "y = boston_data.medv.values\n",
+    "X = boston_data.drop(\"medv\", axis=1)\n",
+    "features = X.columns\n",
+    "X = X.values\n",
+    "\n",
+    "dt = DecisionTreeRegressor(max_depth=4)\n",
+    "dt.fit(X, y)\n",
+    "\n",
+    "preds = dt.predict(X)\n",
+    "print(f'train mse: {np.mean(np.square(preds-y)):0.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# integer linear models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\tmse:  2.09\t[ 1  1 -1  0  0  0  0  0  0  0]\n",
+      "0.01\tmse:  2.09\t[ 1  1 -1  0  0  0  0  0  0  0]\n",
+      "0.05\tmse:  1.02\t[ 1  2 -1  0  0  0  0  0  0  0]\n",
+      "0.1\tmse:  1.02\t[ 1  2 -1  0  0  0  0  0  0  0]\n",
+      "1\tmse:  3.08\t[ 0  1 -1  0  0  0  0  0  0  0]\n",
+      "2\tmse:  1.90\t[ 0  2 -1  0  0  0  0  0  0  0]\n"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as np\n",
-    "import pickle as pkl\n",
-    "from os.path import join as oj\n",
-    "from copy import deepcopy\n",
-    "import pandas as pd\n",
-    "from numpy import array as arr\n",
-    "import time, sys, os\n",
-    "sys.path.append('../src')\n",
-    "import utils\n",
+    "import cvxpy\n",
     "\n",
-    "# sklearn models\n",
-    "from sklearn.calibration import calibration_curve\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
-    "from sklearn.tree import export_graphviz, DecisionTreeClassifier, DecisionTreeRegressor\n",
-    "from sklearn.tree import plot_tree\n",
+    "np.random.seed(123) # for reproducability\n",
     "\n",
-    "import torch\n",
-    "from torch import nn\n",
+    "# generate X and y\n",
+    "n, p = 1000, 10\n",
+    "X = np.random.randn(n, p)\n",
+    "y = X[:, 0] + 2 * X[:, 1] - 1 * X[:, 2] + np.random.randn(n)\n",
     "\n",
-    "cred = (234/255, 51/255, 86/255)\n",
-    "cblue = (57/255, 138/255, 242/255)\n",
-    "out_dir = '../results/sim_linear'\n",
-    "os.makedirs(out_dir, exist_ok=True)"
+    "\n",
+    "def fit_integer_linear_model(X, y, lambda_reg=0):\n",
+    "    # declare the integer-valued optimization variable\n",
+    "    w = cvxpy.Variable(X.shape[1], integer=True)\n",
+    "\n",
+    "    # set up the minimization problem\n",
+    "    obj = cvxpy.Minimize(cvxpy.norm(X * w - y, 2) + lambda_reg * cvxpy.norm(w, 1))\n",
+    "    prob = cvxpy.Problem(obj)\n",
+    "\n",
+    "    # solve the problem using an appropriate solver\n",
+    "    sol = prob.solve(solver = 'ECOS_BB')\n",
+    "\n",
+    "    # the optimal value\n",
+    "    return w.value.astype(np.int)\n",
+    "\n",
+    "for lambda_reg in [0, 1e-2, 5e-2, 1e-1, 1, 2]:\n",
+    "    w = fit_integer_linear_model(X, y, lambda_reg)\n",
+    "    mse = np.mean(np.square(y - X @ w))\n",
+    "    print(f'{lambda_reg}\\tmse: {mse: 0.2f}\\t{w}')"
    ]
   },
   {
@@ -62,9 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
     "from rulefit import RuleFit\n",
     "\n",
     "boston_data = pd.read_csv(\"data/boston.csv\", index_col=0)\n",
@@ -111,7 +170,7 @@
     "# scalable bayesian rule lists\n",
     "- docs at `https://github.com/myaooo/pysbrl`\n",
     "- requires installing some `c` packages (ex. instructions [here](https://coral.ise.lehigh.edu/jild13/2016/07/11/hello/))\n",
-    "- note: import format is pretty strange (it is sensible in [R](https://rdrr.io/cran/sbrl/man/sbrl.html))"
+    "- note: input format is pretty strange (it is sensible in [R](https://rdrr.io/cran/sbrl/man/sbrl.html))"
    ]
   },
   {
@@ -142,7 +201,6 @@
    ],
    "source": [
     "# this example has categorical variables c1, c2, ... that take on values 'o', 'x', 'b'\n",
-    "\n",
     "import pysbrl\n",
     "\n",
     "rule_ids, outputs, rule_strings = pysbrl.train_sbrl(\"data/train.out\", \n",
@@ -170,7 +228,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from pyoptree.optree import OptimalHyperTreeModel, OptimalTreeModel\n",
     "\n",
     "data = pd.DataFrame({\n",
