add get all feat importances

--- a/interp-workshop/uncertainty.ipynb
+++ b/interp-workshop/uncertainty.ipynb
@@ -107,7 +107,7 @@
     "plt.ylabel('$f(x)$')\n",
     "plt.ylim(-10, 20)\n",
     "plt.legend(loc='upper left')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
