--- a/sim/eda_sim_classification_flipped_labels.ipynb
+++ b/sim/eda_sim_classification_flipped_labels.ipynb
@@ -269,36 +269,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def viz_expl(expl_dict, delta_plot=0.05):\n",
-    "    plt.plot(expl_dict['ice_plot'][0], expl_dict['ice_plot'][1], color='black')\n",
-    "#     plt.plot(X_new[:, feature_num], f(X_new)[:, 1], color='black')\n",
-    "    yhat = f(x)[:, class_num]\n",
-    "    x_f = x[:, feature_num]\n",
-    "    plt.plot(x_f, yhat, 'o', color='black', ms=8)\n",
-    "    def cs(score): return cblue if score > 0 else cred\n",
-    "\n",
-    "    plt.plot([x_f, x_f + delta_plot], \n",
-    "             [yhat, yhat + expl['sensitivity_pos'] * delta_plot], lw=10, alpha=0.4, color=cs(expl['sensitivity_pos']))\n",
-    "    plt.plot([x_f, x_f - delta_plot], \n",
-    "             [yhat, yhat - expl['sensitivity_neg'] * delta_plot], lw=10, alpha=0.4, color=cs(expl['sensitivity_neg']))\n",
-    "\n",
-    "#     plt.plot([x_f, xx_f - delta_plot], \n",
-    "\n",
-    "#              [yhat, yhat + (yhat_minus - yhat) * (delta_plot / delta)], lw=10, alpha=0.4, color=cred)\n",
-    "    plt.axhline(yhat - expl['contribution'], color='gray', alpha=0.5, linestyle='--')\n",
-    "    plt.plot([x_f, x_f], [yhat, yhat - expl['contribution']], linestyle='--', color = cs(expl['contribution']))\n",
-    "\n",
-    "    plt.xlabel('feature value')\n",
-    "    plt.ylabel('model prediction')\n",
-    "    plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,17 +295,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "explainer = lcp.Explainer(X)"
+    "**get feature importances**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -443,25 +411,33 @@
        "0             0.064172                0.368471               -0.368466"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "explainer = lcp.Explainer(X)\n",
     "explainer.explain_instance(x, f, class_num, return_table=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**visualize a particular feature locally**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "contribution: 0.06, sensitivity: 0.37\n"
+      "contribution: 0.06, sensitivity pos: 0.37\n"
      ]
     },
     {
@@ -480,10 +456,17 @@
    "source": [
     "expl_dict = explainer.explain_instance_feature_num(x, f, feature_num, class_num)\n",
     "\n",
-    "print(f'contribution: {expl_dict[\"contribution\"]:0.2f}, sensitivity: {expl_dict[\"sensitivity_pos\"]:0.2f}')\n",
+    "print(f'contribution: {expl_dict[\"contribution\"]:0.2f}, sensitivity pos: {expl_dict[\"sensitivity_pos\"]:0.2f}')\n",
     "\n",
     "lcp.viz_expl(expl_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
