--- a/experiments/eda_sim_classification_flipped_labels.ipynb
+++ b/experiments/eda_sim_classification_flipped_labels.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -20,6 +29,8 @@
     "import time\n",
     "sys.path.append('../src')\n",
     "import utils, lcp\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
     "\n",
     "# sklearn models\n",
     "from sklearn.calibration import calibration_curve\n",
@@ -27,6 +38,7 @@
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.tree import export_graphviz, DecisionTreeClassifier, DecisionTreeRegressor\n",
     "from sklearn.tree import plot_tree\n",
+    "from sklearn.metrics import auc\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -46,29 +58,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "flipped 24\n",
       "flipped 24\n"
      ]
     }
    ],
    "source": [
     "np.random.seed(13)\n",
+    "def get_data(N, p):\n",
+    "    X = np.random.rand(N, p)\n",
+    "    y = (X[:, 0] > 0.95).astype(np.int32)\n",
+    "    \n",
+    "    # flip some points\n",
+    "    num_to_flip = int(N * 0.08)\n",
+    "    idxs = np.random.choice(N, num_to_flip, replace=False)\n",
+    "    y[idxs] = 1 - y[idxs]\n",
+    "    print('flipped', num_to_flip)\n",
+    "    flipped = np.zeros(N, dtype=np.bool)\n",
+    "    flipped[idxs] = 1    \n",
+    "    \n",
+    "    return X, y, flipped\n",
+    "\n",
+    "\n",
+    "\n",
     "N = 300\n",
     "p = 10\n",
-    "X = np.random.rand(N, p)\n",
-    "y = (X[:, 0] > 0.95).astype(np.int32)\n",
-    "\n",
-    "# flip some points\n",
-    "num_to_flip = int(N * 0.08)\n",
-    "idxs = np.random.choice(N, num_to_flip, replace=False)\n",
-    "y[idxs] = 1 - y[idxs]\n",
-    "print('flipped', num_to_flip)\n",
+    "X, y, flipped = get_data(N, p)\n",
+    "X_test, y_test, flipped_test = get_data(N, p)\n",
     "\n",
     "# plot the data\n",
-    "flipped = np.zeros(N, dtype=np.bool)\n",
-    "flipped[idxs] = 1\n",
     "# plt.plot(X[~flipped, 0], y[~flipped], '.')\n",
     "# plt.plot(X[flipped, 0], y[flipped], 'x')\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### train models"
    ]
   },
   {
@@ -100,43 +129,15 @@
     "    plt.plot(X[~flipped, 0], m.predict_proba(X)[~flipped, 1], 'o', label=str(class_weight), alpha=0.2)\n",
     "    plt.plot(X[flipped, 0], m.predict_proba(X)[flipped, 1], 'x', color='black')\n",
     "    models.append(deepcopy(m))\n",
+    "\n",
+    "m_diffident = models[1]\n",
+    "m_canonical  = models[2]\n",
+    "m_confident = models[3]\n",
+    "    \n",
     "plt.xlabel('x')\n",
     "plt.ylabel('pred prob')\n",
     "plt.legend()\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_metrics(models, X_train, y_train, flipped_train, X_test, y_test, flipped_test):\n",
-    "    '''Get metrics to evaluate the class-weight uncertainty.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        models : list \n",
-    "            Models [diffident, canonical, confidenct)\n",
-    "        flipped_train : boolean ndarray\n",
-    "            Which indexes were flipped during training\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        (auc_auc, acc_auc, flipped_mean, flipped_std, unflipped_mean, unflipped_std)\n",
-    "            Returns this for both train and test\n",
-    "    \n",
-    "    '''\n",
-    "    ...\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "def get_interp(models, X_train, y_train):\n",
-    "    '''Return interpretations for models on this data.\n",
-    "    \n",
-    "    '''\n",
-    "    ..."
    ]
   },
   {
@@ -148,19 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_diffident = models[1]\n",
-    "m_canonical  = models[2]\n",
-    "m_confident = models[3]\n",
-    "f = m_canonical.predict_proba\n",
-    "\n",
     "preds_diffident = m_diffident.predict_proba(X)\n",
     "preds_canonical = m_canonical.predict_proba(X)\n",
     "preds_confident = m_confident.predict_proba(X)\n",
-    "\n",
     "uncertainties_probit = (preds_confident - preds_diffident)[:, 1]"
    ]
   },
@@ -173,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +194,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_train = get_metrics(m_diffident.predict_proba(X)[:, 1], m_canonical.predict_proba(X)[:, 1], m_confident.predict_proba(X)[:, 1], \n",
+    "            y, flipped)\n",
+    "metrics_test = get_metrics(m_diffident.predict_proba(X_test)[:, 1], m_canonical.predict_proba(X_test)[:, 1], m_confident.predict_proba(X_test)[:, 1], \n",
+    "            y_test, flipped_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -207,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -303,22 +310,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uncertainty flipped: 0.12 unflipped: 0.11778437124972192\n",
-      "uncertainty flipped: 0.21 unflipped: 0.2050568217814161\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.01632653, 0.25806452])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'uncertainty flipped: {np.mean(uncertainties_probit[~flipped]):0.2f} unflipped: {np.mean(uncertainties_probit[~flipped])}')\n",
-    "print(f'uncertainty flipped: {np.mean(uncertainty_from_pred[~flipped]):0.2f} unflipped: {np.mean(uncertainty_from_pred[~flipped])}')"
+    "prob_true"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.08545413, 0.23747027])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05100366877842681"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
