full table w/ loss auc

--- a/interp/eda_interp.ipynb
+++ b/interp/eda_interp.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(13)\n",
-    "x = np.random.rand(1, p)\n",
-    "feature_num = 0\n",
-    "class_num = 1"
+    "x = np.random.rand(1, p)"
    ]
   },
   {
@@ -95,115 +84,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contribution_scores</th>\n",
-       "      <th>sensitivity_pos_scores</th>\n",
-       "      <th>sensitivity_neg_scores</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.017</td>\n",
-       "      <td>-0.050</td>\n",
-       "      <td>0.050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-0.007</td>\n",
-       "      <td>-0.056</td>\n",
-       "      <td>0.056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-0.001</td>\n",
-       "      <td>-0.004</td>\n",
-       "      <td>0.004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.002</td>\n",
-       "      <td>-0.078</td>\n",
-       "      <td>0.078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>-0.007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.005</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>-0.022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.006</td>\n",
-       "      <td>-0.026</td>\n",
-       "      <td>0.026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.011</td>\n",
-       "      <td>0.050</td>\n",
-       "      <td>-0.050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.024</td>\n",
-       "      <td>0.056</td>\n",
-       "      <td>-0.056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.038</td>\n",
-       "      <td>0.320</td>\n",
-       "      <td>-0.320</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col0 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col2 {\n",
+       "            background-color:  #25ab82;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col0 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col2 {\n",
+       "            background-color:  #27ad81;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col0 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col2 {\n",
+       "            background-color:  #218f8d;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col0 {\n",
+       "            background-color:  #460a5d;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col2 {\n",
+       "            background-color:  #3bbb75;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col0 {\n",
+       "            background-color:  #471164;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col2 {\n",
+       "            background-color:  #23888e;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col0 {\n",
+       "            background-color:  #481d6f;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col2 {\n",
+       "            background-color:  #277f8e;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col0 {\n",
+       "            background-color:  #482475;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col2 {\n",
+       "            background-color:  #1e9c89;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col0 {\n",
+       "            background-color:  #424086;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col1 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col2 {\n",
+       "            background-color:  #2e6e8e;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col0 {\n",
+       "            background-color:  #277e8e;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col1 {\n",
+       "            background-color:  #46075a;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col2 {\n",
+       "            background-color:  #306a8e;\n",
+       "            color:  #f1f1f1;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col0 {\n",
+       "            background-color:  #3bbb75;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col1 {\n",
+       "            background-color:  #3bbb75;\n",
+       "            color:  #000000;\n",
+       "        }    #T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col2 {\n",
+       "            background-color:  #440154;\n",
+       "            color:  #f1f1f1;\n",
+       "        }</style><table id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >contribution_scores</th>        <th class=\"col_heading level0 col1\" >sensitivity_pos_scores</th>        <th class=\"col_heading level0 col2\" >sensitivity_neg_scores</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row0\" class=\"row_heading level0 row0\" >2</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col0\" class=\"data row0 col0\" >-0.017</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col1\" class=\"data row0 col1\" >-0.05</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow0_col2\" class=\"data row0 col2\" >0.05</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row1\" class=\"row_heading level0 row1\" >6</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col0\" class=\"data row1 col0\" >-0.007</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col1\" class=\"data row1 col1\" >-0.056</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow1_col2\" class=\"data row1 col2\" >0.056</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row2\" class=\"row_heading level0 row2\" >8</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col0\" class=\"data row2 col0\" >-0.001</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col1\" class=\"data row2 col1\" >-0.004</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow2_col2\" class=\"data row2 col2\" >0.004</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row3\" class=\"row_heading level0 row3\" >5</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col0\" class=\"data row3 col0\" >0.002</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col1\" class=\"data row3 col1\" >-0.078</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow3_col2\" class=\"data row3 col2\" >0.078</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row4\" class=\"row_heading level0 row4\" >3</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col0\" class=\"data row4 col0\" >0.003</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col1\" class=\"data row4 col1\" >0.007</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow4_col2\" class=\"data row4 col2\" >-0.007</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row5\" class=\"row_heading level0 row5\" >7</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col0\" class=\"data row5 col0\" >0.005</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col1\" class=\"data row5 col1\" >0.022</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow5_col2\" class=\"data row5 col2\" >-0.022</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row6\" class=\"row_heading level0 row6\" >1</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col0\" class=\"data row6 col0\" >0.006</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col1\" class=\"data row6 col1\" >-0.026</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow6_col2\" class=\"data row6 col2\" >0.026</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row7\" class=\"row_heading level0 row7\" >9</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col0\" class=\"data row7 col0\" >0.011</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col1\" class=\"data row7 col1\" >0.05</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow7_col2\" class=\"data row7 col2\" >-0.05</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row8\" class=\"row_heading level0 row8\" >4</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col0\" class=\"data row8 col0\" >0.024</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col1\" class=\"data row8 col1\" >0.056</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow8_col2\" class=\"data row8 col2\" >-0.056</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0alevel0_row9\" class=\"row_heading level0 row9\" >0</th>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col0\" class=\"data row9 col0\" >0.038</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col1\" class=\"data row9 col1\" >0.32</td>\n",
+       "                        <td id=\"T_f0d8da70_a1c7_11e9_a8ab_002590e83e0arow9_col2\" class=\"data row9 col2\" >-0.32</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "   contribution_scores  sensitivity_pos_scores  sensitivity_neg_scores\n",
-       "2               -0.017                  -0.050                   0.050\n",
-       "6               -0.007                  -0.056                   0.056\n",
-       "8               -0.001                  -0.004                   0.004\n",
-       "5                0.002                  -0.078                   0.078\n",
-       "3                0.003                   0.007                  -0.007\n",
-       "7                0.005                   0.022                  -0.022\n",
-       "1                0.006                  -0.026                   0.026\n",
-       "9                0.011                   0.050                  -0.050\n",
-       "4                0.024                   0.056                  -0.056\n",
-       "0                0.038                   0.320                  -0.320"
+       "<pandas.io.formats.style.Styler at 0x7f49640c4b70>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,16 +291,41 @@
     }
    ],
    "source": [
+    "feature_num = 0\n",
+    "class_num = 1\n",
+    "expl_dict = explainer.explain_instance_feature_num(x, models[1].predict_proba, feature_num, class_num)\n",
     "lcp.viz_expl(expl_dict, show=False)\n",
     "\n",
     "ice_top = explainer.calc_ice_grid(x, models[0].predict_proba, feature_num)\n",
     "ice_bot = explainer.calc_ice_grid(x, models[2].predict_proba, feature_num)\n",
-    "\n",
+    "c\n",
     "plt.plot(ice_top[0], ice_top[1][:, 1], color='gray')\n",
     "plt.plot(ice_bot[0], ice_bot[1][:, 1], color='gray')\n",
     "print(f'contribution: {expl_dict[\"contribution\"]:0.2f}, sensitivity pos: {expl_dict[\"sensitivity_pos\"]:0.2f}')\n",
     "\n",
     "lcp.viz_expl(expl_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cde'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-723ceec30dbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcde\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcde\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdensity_estimator\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKernelMixtureNetwork\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cde'"
+     ]
+    }
+   ],
+   "source": [
+    "import cde\n",
+    "from cde.density_estimator import KernelMixtureNetwork\n"
    ]
   },
   {
