add lcp metadata

--- a/experiments/sweep_pmlb/analyze_pmlb.ipynb
+++ b/experiments/sweep_pmlb/analyze_pmlb.ipynb
@@ -417,40 +417,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabularx}{\\textwidth}{l X X X X}\n",
-      "Dataset\t&\tClass-weight uncertainty AUC\t&\tUncertainty from pred AUC\t&\tClass-weight uncertainty loss\t&\tUncertainty from pred loss \\\\\n",
+      "\\begin{tabular}{l | c | c}\n",
+      "Dataset\t&\tClass-weight uncertainty AUC\t&\tUncertainty from pred AUC \\\\\n",
       "\\hline\n",
-      "hypothyroid\t&\t83.32\t&\t29.30\t&\t8.79\t&\t7.83\\\\\n",
-      "dis\t&\t70.14\t&\t33.99\t&\t8.47\t&\t7.53\\\\\n",
-      "coil2000\t&\t75.82\t&\t63.30\t&\t10.35\t&\t9.84\\\\\n",
-      "churn\t&\t66.02\t&\t54.60\t&\t10.33\t&\t10.04\\\\\n",
-      "banana\t&\t52.20\t&\t42.04\t&\t11.00\t&\t11.00\\\\\n",
-      "phoneme\t&\t72.78\t&\t65.34\t&\t10.73\t&\t10.40\\\\\n",
-      "flare\t&\t58.04\t&\t51.14\t&\t8.83\t&\t8.50\\\\\n",
-      "german\t&\t55.63\t&\t49.53\t&\t8.97\t&\t8.75\\\\\n",
-      "mushroom\t&\t94.92\t&\t90.12\t&\t9.99\t&\t9.66\\\\\n",
-      "monk1\t&\t32.31\t&\t27.79\t&\t8.40\t&\t8.41\\\\\n",
-      "\\end{tabularx}\n"
+      "hypothyroid\t&\t83.32\t&\t29.30\\\\\n",
+      "dis\t&\t70.14\t&\t33.99\\\\\n",
+      "coil2000\t&\t75.82\t&\t63.30\\\\\n",
+      "churn\t&\t66.02\t&\t54.60\\\\\n",
+      "banana\t&\t52.20\t&\t42.04\\\\\n",
+      "phoneme\t&\t72.78\t&\t65.34\\\\\n",
+      "flare\t&\t58.04\t&\t51.14\\\\\n",
+      "german\t&\t55.63\t&\t49.53\\\\\n",
+      "mushroom\t&\t94.92\t&\t90.12\\\\\n",
+      "monk1\t&\t32.31\t&\t27.79\\\\\n",
+      "\\end{tabular}\n"
      ]
     }
    ],
    "source": [
-    "print('\\\\begin{tabularx}{\\\\textwidth}{l X X X X}')\n",
-    "print('Dataset\\t&\\tClass-weight uncertainty AUC\\t&\\tUncertainty from pred AUC', end='')\n",
-    "print('\\t&\\tClass-weight uncertainty loss\\t&\\tUncertainty from pred loss \\\\\\\\')\n",
+    "print('\\\\begin{tabular}{l | c | c}')\n",
+    "print('Dataset\\t&\\tClass-weight uncertainty AUC\\t&\\tUncertainty from pred AUC \\\\\\\\')\n",
     "print('\\hline')\n",
     "for i in range(10):\n",
     "    row = r2.iloc[i]\n",
-    "    print(f'{row.dset_name}\\t&\\t{row.uncertainty_probit_auc_auc_test:0.2f}\\t&\\t{row.uncertainty_from_pred_auc_auc_test:0.2f}', end='')\n",
-    "    print(f'\\t&\\t{np.log(row.uncertainty_probit_loss_auc_test):0.2f}\\t&\\t{np.log(row.uncertainty_from_pred_loss_auc_test):0.2f}\\\\\\\\')\n",
-    "print('\\end{tabularx}')"
+    "    print(f'{row.dset_name}\\t&\\t{row.uncertainty_probit_auc_auc_test:0.2f}\\t&\\t{row.uncertainty_from_pred_auc_auc_test:0.2f}\\\\\\\\')\n",
+    "print('\\end{tabular}')"
    ]
   },
   {
