add doubling for tree-based models

--- a/experiments/eda_sim_classification_flipped_labels.ipynb
+++ b/experiments/eda_sim_classification_flipped_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
     "from numpy import array as arr\n",
     "import time\n",
     "sys.path.append('../src')\n",
+    "sys.path.append('../interp')\n",
     "import utils, lcp\n",
     "from scipy.stats import ttest_ind\n",
     "\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +158,53 @@
     "preds_canonical = m_canonical.predict_proba(X)\n",
     "preds_confident = m_confident.predict_proba(X)\n",
     "uncertainties_probit = (preds_confident - preds_diffident)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def h(x): \n",
+    "    return -x * np.log2(x) - (1 - x) * np.log2(1 - x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.22079781 0.04343963 0.22572756] [0.7616216  0.25784639 0.77048881]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preds_canonical[:3, 1], h(preds_canonical[:3, 1]))"
    ]
   },
   {
